--- a/src/Pim/Bundle/UIBundle/Resources/public/less/components/product-edit-form/TextCollectionField.less
+++ b/src/Pim/Bundle/UIBundle/Resources/public/less/components/product-edit-form/TextCollectionField.less
@@ -1,10 +1,10 @@
 @import '../../base/variables';
 
-.AknTextCollectionValues {
+.AknTextCollection, .AknTextCollection-items {
     width: 100%;
 }
 
-.AknTextCollectionActions {
+.AknTextCollection-actions {
     width: 100px;
     text-align: right;
 }
