AMS-186: add new images

--- a/src/Pim/Bundle/UIBundle/Resources/public/less/components/Notification.less
+++ b/src/Pim/Bundle/UIBundle/Resources/public/less/components/Notification.less
@@ -69,7 +69,15 @@
     }
 
     &--projectCalculation {
-      background-image: url("../../images/icon-import.svg"); // TODO Replace by custom icon
+      background-image: url("../../images/icon-tasks.svg");
+    }
+
+    &--projectCreated {
+      background-image: url("../../images/icon-tasks.svg");
+    }
+
+    &--projectFinished {
+      background-image: url("../../images/icon-tasks-done.svg");
     }
   }
 
